--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,18 +24,25 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
     
-    - name: Authorize Docker push
-      run: gcloud auth configure-docker
+    - name: Create Artifact Registry Repository
+      run: |
+        gcloud artifacts repositories create prompttovideo \
+          --repository-format=docker \
+          --location=us-central1 \
+          --description="Docker repository for PromptToVideo app" || true
+    
+    - name: Configure Docker for Artifact Registry
+      run: gcloud auth configure-docker us-central1-docker.pkg.dev
     
     - name: Build and Push Container
       run: |
-        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }} .
-        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+        docker build -t us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/prompttovideo/${{ env.SERVICE_NAME }}:${{ github.sha }} .
+        docker push us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/prompttovideo/${{ env.SERVICE_NAME }}:${{ github.sha }}
     
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy ${{ env.SERVICE_NAME }} \
-          --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }} \
+          --image us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/prompttovideo/${{ env.SERVICE_NAME }}:${{ github.sha }} \
           --region ${{ env.REGION }} \
           --platform managed \
           --allow-unauthenticated \
