--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,19 +23,9 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-      
-      redis:
-        image: redis:7-alpine
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -52,13 +42,12 @@ jobs:
       env:
         FLASK_ENV: testing
         DATABASE_URL: postgresql://postgres:password@localhost:5432/prompttovideo_test
-        REDIS_URL: redis://localhost:6379/0
-        CELERY_BROKER_URL: redis://localhost:6379/0
-        CELERY_RESULT_BACKEND: redis://localhost:6379/0
         SECRET_KEY: test-secret-key
         JWT_SECRET_KEY: test-jwt-secret
+        VEO_MOCK_MODE: true
+        GCS_BUCKET_NAME: test-bucket
       run: |
-        pytest --cov=app --cov-report=xml
+        pytest tests/ --cov=app --cov-report=xml --ignore=old/
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -73,7 +62,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
