--- a/env.example
+++ b/env.example
@@ -1,12 +1,11 @@
 # Flask Configuration
 FLASK_ENV=development
 SECRET_KEY=your-secret-key-here
-JWT_SECRET_KEY=your-jwt-secret-key-here
 
 # Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/prompttovideo
-DEV_DATABASE_URL=postgresql://postgres:password@localhost:5432/prompttovideo_dev
-TEST_DATABASE_URL=postgresql://postgres:password@localhost:5432/prompttovideo_test
+DATABASE_URL=postgresql://localhost/prompttovideo
+DEV_DATABASE_URL=sqlite:///app.db
+TEST_DATABASE_URL=sqlite:///:memory:
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
@@ -19,40 +18,31 @@ MAIL_PORT=587
 MAIL_USE_TLS=true
 MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
-MAIL_DEFAULT_SENDER=noreply@prompttovideo.com
 
 # Stripe Configuration
 STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key
 STRIPE_SECRET_KEY=sk_test_your_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# Google Cloud Storage
-GCS_BUCKET_NAME=prompttovideo-videos
-GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account-key.json
+# Google Cloud Configuration
+GOOGLE_CLOUD_PROJECT=dirly-466300
+GCS_BUCKET_NAME=prompt-veo-videos
+# For Cloud Run, use default service account credentials
+# GOOGLE_APPLICATION_CREDENTIALS is not needed in Cloud Run
 
-# Google Cloud Project Configuration
-GOOGLE_CLOUD_PROJECT_ID=dirly-466300
-GOOGLE_CLOUD_LOCATION=us-central1
-
-# Veo API Configuration
-VEO_API_KEY=your_veo_api_key
-VEO_API_URL=https://api.veo.ai
+# Veo API Configuration (now uses Google Cloud authentication)
+# No API key needed - uses gcloud auth print-access-token
 
 # Sentry Configuration
-SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+SENTRY_DSN=your-sentry-dsn
 
-# Application Configuration
-BASE_URL=http://localhost:5000
+# JWT Configuration
+JWT_SECRET_KEY=your-jwt-secret-key
+
+# Credit System Configuration
 DAILY_FREE_CREDITS=3
-CREDIT_COST_360P=1
-CREDIT_COST_1080P=3
+CREDIT_COST_FREE=1
+CREDIT_COST_PREMIUM=3
 
-# Rate Limiting
-RATELIMIT_STORAGE_URL=redis://localhost:6379/0
-RATELIMIT_DEFAULT=100 per hour
-
-# Production Settings (uncomment for production)
-# FLASK_ENV=production
-# DATABASE_URL=postgresql://user:password@host:port/database
-# REDIS_URL=redis://host:port/0
-# SENTRY_DSN=https://your-production-sentry-dsn@sentry.io/project-id 
+# Gemini AI Configuration
+GEMINI_API_KEY=your-gemini-api-key 
