--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,7 +39,7 @@ steps:
       - '--max-instances'
       - '5'
       - '--set-env-vars'
-      - 'FLASK_ENV=production,DATABASE_URL=postgresql://prompttovideo:PromptToVideo2024!@/prompttovideo?host=/cloudsql/$PROJECT_ID:us-central1:prompttovideo-db,GCS_BUCKET_NAME=prompt-veo-videos,GOOGLE_CLOUD_PROJECT_ID=$PROJECT_ID,VEO_MOCK_MODE=false,DAILY_FREE_CREDITS=3,CREDIT_COST_FREE=1,CREDIT_COST_PREMIUM=3'
+      - 'FLASK_ENV=production,DATABASE_URL=postgresql://prompttovideo:PromptToVideo2024!@/prompttovideo?host=/cloudsql/$PROJECT_ID:us-central1:prompttovideo-db,GCS_BUCKET_NAME=prompt-veo-videos,GOOGLE_CLOUD_PROJECT_ID=$PROJECT_ID,DAILY_FREE_CREDITS=3,CREDIT_COST_FREE=1,CREDIT_COST_PREMIUM=3'
       - '--add-cloudsql-instances'
       - '$PROJECT_ID:us-central1:prompttovideo-db'
       - '--service-account'
@@ -72,7 +72,7 @@ steps:
       - '--min-instances'
       - '1'
       - '--set-env-vars'
-      - 'FLASK_ENV=production,DATABASE_URL=postgresql://prompttovideo:PromptToVideo2024!@/prompttovideo?host=/cloudsql/$PROJECT_ID:us-central1:prompttovideo-db,GCS_BUCKET_NAME=prompt-veo-videos,GOOGLE_CLOUD_PROJECT_ID=$PROJECT_ID,VEO_MOCK_MODE=false,DAILY_FREE_CREDITS=3,CREDIT_COST_FREE=1,CREDIT_COST_PREMIUM=3,CELERY_WORKER_CONCURRENCY=4'
+      - 'FLASK_ENV=production,DATABASE_URL=postgresql://prompttovideo:PromptToVideo2024!@/prompttovideo?host=/cloudsql/$PROJECT_ID:us-central1:prompttovideo-db,GCS_BUCKET_NAME=prompt-veo-videos,GOOGLE_CLOUD_PROJECT_ID=$PROJECT_ID,DAILY_FREE_CREDITS=3,CREDIT_COST_FREE=1,CREDIT_COST_PREMIUM=3,CELERY_WORKER_CONCURRENCY=4'
       - '--add-cloudsql-instances'
       - '$PROJECT_ID:us-central1:prompttovideo-db'
       - '--service-account'
